--- a/research/2. data_validation.ipynb
+++ b/research/2. data_validation.ipynb
@@ -111,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Components\n",
     "class DataValidation:\n",
-    "    def __init__(self, config = DataValidationConfig):\n",
+    "    def __init__(self, config : DataValidationConfig):\n",
     "        self.config = config\n",
     "    \n",
     "    def validate_all_data_exist(self):\n",
@@ -141,17 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artifacts/data_validation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_v = DataValidation(cnfg)\n",
     "d_v.validate_all_data_exist()"
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,15 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-04-27 16:28:29,677 INFO root common 17 - yaml file- config\\config.yaml is loaded successfully]\n",
-      "[2024-04-27 16:28:29,679 INFO root common 17 - yaml file- params.yaml is loaded successfully]\n"
+      "[2024-04-28 00:45:01,133 INFO root common 17 - yaml file- config\\config.yaml is loaded successfully]\n",
+      "[2024-04-28 00:45:01,143 INFO root common 17 - yaml file- params.yaml is loaded successfully]\n"
      ]
     },
     {
@@ -211,6 +203,13 @@
     "validate_data = DataValidationPipeline()\n",
     "validate_data.main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
